RESOLVED FIXED186640
[LFC] Fix static position left/top
https://bugs.webkit.org/show_bug.cgi?id=186640
Summary [LFC] Fix static position left/top
alan
Reported 2018-06-14 18:50:08 PDT
return { top, left }; -> return { left, top }; This is so error prone and should find a way to enforce left/top vs. top/left.
Attachments
Patch (4.86 KB, patch)
2018-06-14 19:38 PDT, alan
koivisto: review+
ltilve+ews: commit-queue-
Archive of layout-test-results from ltilve-gtk-wk2-ews for gtk-wk2 (2.79 MB, application/zip)
2018-06-15 04:52 PDT, Igalia-pontevedra EWS
no flags
alan
Comment 1 2018-06-14 19:38:41 PDT
Igalia-pontevedra EWS
Comment 2 2018-06-15 04:52:09 PDT
Comment on attachment 342785 [details] Patch Attachment 342785 [details] did not pass gtk-wk2-ews (gtk-wk2): Output: http://webkit-queues.webkit.org/results/8195225 New failing tests: http/tests/misc/char-encoding-bocu-1-blacklisted.html
Igalia-pontevedra EWS
Comment 3 2018-06-15 04:52:16 PDT
Created attachment 342802 [details] Archive of layout-test-results from ltilve-gtk-wk2-ews for gtk-wk2 The attached test failures were seen while running run-webkit-tests on the gtk-wk2-ews. Bot: ltilve-gtk-wk2-ews Port: gtk-wk2 Platform: Linux-4.16.0-0.bpo.1-amd64-x86_64-with-debian-9.4
Antti Koivisto
Comment 4 2018-06-15 08:08:00 PDT
Comment on attachment 342785 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=342785&action=review > Source/WebCore/ChangeLog:8 > + In visual formatting model, we normally go like [top, left] while LayoutPoint takes [x, y]. Let's make this less error prone. Couldn't we use [left, top] [x, y] consistently?
Antti Koivisto
Comment 5 2018-06-15 08:29:59 PDT
Comment on attachment 342785 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=342785&action=review > Source/WebCore/layout/FormattingContext.h:86 > + LayoutUnit y; // top > + LayoutUnit x; // left Maybe we could have something like LayoutUnit<Vertical> and LayoutUnit<Horizontal> so mixing would require explicit conversions?
alan
Comment 6 2018-06-15 08:49:08 PDT
(In reply to Antti Koivisto from comment #5) > Comment on attachment 342785 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=342785&action=review > > > Source/WebCore/layout/FormattingContext.h:86 > > + LayoutUnit y; // top > > + LayoutUnit x; // left > > Maybe we could have something like LayoutUnit<Vertical> and > LayoutUnit<Horizontal> so mixing would require explicit conversions? Great idea. Yeah, we should do something like that.
alan
Comment 7 2018-06-15 09:26:28 PDT
Radar WebKit Bug Importer
Comment 8 2018-06-15 09:27:20 PDT
Note You need to log in before you can comment on or make changes to this bug.