[LFC] Fix static position left/top https://bugs.webkit.org/show_bug.cgi?id=186640

Reviewed by Antti Koivisto.

In visual formatting model, we normally go like [top, left] while LayoutPoint takes [x, y]. Let's make this less error prone.

* layout/FormattingContext.h:
(WebCore::Layout::FormattingContext::Geometry::Position::operator LayoutPoint const):
* layout/blockformatting/BlockFormattingContext.h:
* layout/blockformatting/BlockFormattingContextGeometry.cpp:
(WebCore::Layout::BlockFormattingContext::Geometry::staticPosition):
(WebCore::Layout::BlockFormattingContext::Geometry::inFlowPositionedPosition):

Canonical link: https://commits.webkit.org/201981@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@232876 268f45cc-cd09-0410-ab3c-d52691b4dbfc